crates/guest-macros/tests/compile_fail/duplicate_owner.rs
struct Provider;

omnia_guest_macros::guest!({
    owner: "examples",
    owner: "again",
    provider: Provider,
});

fn main() {}
