crates/guest-macros/tests/compile_fail/duplicate_owner.stderr
error: cannot specify second owner
 --> tests/compile_fail/duplicate_owner.rs:5:12
  |
5 |     owner: "again",
  |            ^^^^^^^
